--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
 
     <div class="container">
-      <h1>Refresh Me</h1>
+      <h1>Roll Me</h1>
 
       <div class="dice">
         <p>Player 1</p>
